--- a/assets/css/roadmap.css
+++ b/assets/css/roadmap.css
@@ -209,7 +209,7 @@
 }
 
 #roadmap .grid-layout .single-map-block.card-1,#roadmap .grid-layout .single-map-block.card-3 {
-    background-image: linear-gradient(90deg, transparent 20%, white 30%)
+    background-color: #212529;
 }
 
 @media (max-width: 1330px) {
@@ -236,7 +236,7 @@
 }
 
 #roadmap .grid-layout .single-map-block.card-2,#roadmap .grid-layout .single-map-block.card-4 {
-    background-image: linear-gradient(90deg, white 70%, transparent 0%);
+    background-color: #212529;
     flex-direction: row-reverse
 }
 
@@ -410,7 +410,7 @@
 }
 
 #roadmap .grid-layout .single-map-block.card-5 {
-    background-image: linear-gradient(90deg, transparent 20%, white 30%);
+    background-color: #212529;
 }
 
 @media (max-width: 1330px) {
@@ -439,7 +439,7 @@
 }
 
 #roadmap .grid-layout .single-map-block.card-6 {
-    background-image: linear-gradient(90deg, white 70%, transparent 0%);
+    background-color: #212529;
     flex-direction: row-reverse;
 }
 
