--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -228,7 +228,7 @@ a i:hover{
 .faq-accordian .card .card-header h6 {
   cursor: pointer;
   padding: 1.75rem 2rem;
-  color: #3f43fd;
+  color: #fd3f3f;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -240,11 +240,22 @@ a i:hover{
   -ms-flex-pack: justify;
   justify-content: space-between;
 }
+
+.accordion-button:not(.collapsed) {
+  color: var(--bs-accordion-active-color);
+  background-color: #fd3f3f7e;
+  box-shadow: inset 0 calc(-1* var(--bs-accordion-border-width)) 0 var(--bs-accordion-border-color);
+}
+
+.accordion {
+ --bs-accordion-btn-focus-box-shadow: 0 0 0 0.25rem rgba(253, 13, 13, 0.25);
+}
+
 .faq-accordian .card .card-header h6 span {
   font-size: 1.5rem;
 }
 .faq-accordian .card .card-header h6.collapsed {
-  color: #070a57;
+  color: #570707;
 }
 .faq-accordian .card .card-header h6.collapsed span {
   -webkit-transform: rotate(-180deg);
