--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -217,8 +217,8 @@ a i:hover{
 }
 
 .section_padding_130 {
-  padding-top: 130px;
-  padding-bottom: 130px;
+  padding-top: 50px;
+  padding-bottom: 50px;
 }
 .faq_area {
   position: relative;
@@ -358,6 +358,10 @@ a i:hover{
 
 .sub-color{
   color: #f91320;
+}
+
+.sub-color2{
+  color: #8D292B;
 }
 
 .glow{
