--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -364,6 +364,10 @@ a i:hover{
   color: #8D292B;
 }
 
+.mapa{
+  align-items: center;
+}
+
 .glow{
   -webkit-filter: drop-shadow(0px 0px 30px rgba(255, 255, 255, 0.6));
 }
