--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -176,6 +176,13 @@ hr {
   background-position:right;
 }
 
+.akcija{
+  position: absolute;
+  bottom: 0px;
+  right: 0px;
+  border-radius: 10px 0px 10px 0px;
+}
+
 /* CSS */
 .button-5{
   background-color: #fd3f3f !important;
