--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -177,7 +177,69 @@ hr {
   background-position:right;
 }
 
+/* ROTATE CARD */
+
+.car-circle{
+  position: absolute;
+  width: 100px;
+  height: 100px;
+  top: -50px;
+  right: 100px;
+}
+
+.car-circle i{
+  position: absolute;
+  top: -80px;
+  right: 30px;
+}
+
+.scene {
+  width: 300px;
+  height: 400px;
+  margin: 40px 0;
+  perspective: 600px;
+}
+
+.cardflip {
+  border: 1px solid #270c13;
+  position: relative;
+  width: 100%;
+  height: 100%;
+  cursor: pointer;
+  transform-style: preserve-3d;
+  transform-origin: center right;
+  transition: transform 1s;
+}
+
+.cardflip.is-flipped {
+  transform: translateX(-100%) rotateY(-180deg);
+}
+
+.card__face {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  line-height: 260px;
+  color: white;
+  text-align: center;
+  font-weight: bold;
+  font-size: 40px;
+  backface-visibility: hidden;
+}
+
+.card__face--front {
+  
+}
+
+.card__face--back {
+  
+  transform: rotateY(180deg);
+}
+
+
+
 /* CSS */
+
 .p-height{
   height: 47px;
 }
