--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -179,22 +179,23 @@ hr {
 
 /* ROTATE CARD */
 
-.car-circle{
+.car-circle {
   position: absolute;
   width: 100px;
   height: 100px;
   top: -50px;
-  right: 100px;
+  right: 0; /* Promenili smo right na 0 da bi blok bio centriran po x osi */
+  left: 0; /* Dodali smo left na 0 da bi blok bio centriran po x osi */
+  margin: auto; /* Koristimo margin:auto da bi centrirali blok */
+  padding: 10px;
 }
 
 .car-circle i{
-  position: absolute;
-  top: -80px;
-  right: 30px;
+  font-size: 46px;
 }
 
 .scene {
-  width: 300px;
+  width: 100%;
   height: 400px;
   margin: 40px 0;
   perspective: 600px;
@@ -219,11 +220,8 @@ hr {
   position: absolute;
   width: 100%;
   height: 100%;
-  line-height: 260px;
   color: white;
   text-align: center;
-  font-weight: bold;
-  font-size: 40px;
   backface-visibility: hidden;
 }
 
