--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,6 +26,24 @@ body{
   font-style: normal;
 }
 
+.style-4::-webkit-scrollbar-track
+{
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	background-color: #F5F5F5;
+}
+
+.style-4::-webkit-scrollbar
+{
+	width: 10px;
+	background-color: #F5F5F5;
+}
+
+.style-4::-webkit-scrollbar-thumb
+{
+	background-color: #270c13;
+	border: 2px solid #000000;
+}
+
 .dropdown-hover:hover .dropdown-menu {
   display: block;
 }
@@ -212,7 +230,7 @@ hr {
 }
 
 .vh50{
-  height: 50vh;
+  height: 45vh;
 }
 
 .scene {
